Feature: added mappers as DI