@@ -1,10 +1,13 @@
 package ru.practicum.shareit.user.service;
 
 import lombok.AllArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.user.dao.UserRepository;
 import ru.practicum.shareit.user.dto.UserDto;
-import ru.practicum.shareit.user.dto.UserDtoList;
+import ru.practicum.shareit.user.dto.UserListDto;
 import ru.practicum.shareit.user.dto.UserMapper;
 import ru.practicum.shareit.user.exceptions.DuplicateEmailException;
 import ru.practicum.shareit.user.exceptions.UserNotFoundException;
@@ -13,57 +16,52 @@ import ru.practicum.shareit.user.model.User;
 import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import javax.validation.Validator;
-import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final Validator validator;
-
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     @Override
     public UserDto findUser(Long id) {
-        return UserMapper.INSTANCE.userToUserDto(getUser(id));
+        return userMapper.userToUserDto(getUser(id));
     }
 
     @Override
-    public UserDtoList findAllUsers() {
-        return UserDtoList.builder()
-                .userDtoList(
-                        getUsers()
-                                .stream()
-                                .map(UserMapper.INSTANCE::userToUserDto)
-                                .collect(Collectors.toList())
-                )
-                .build();
+    public UserListDto findAllUsers(PageRequest pageRequest) {
+        return UserListDto.builder()
+                .userDtoList(getUsers(pageRequest).map(userMapper::userToUserDto).toList()).
+                build();
     }
 
     @Override
+    @Transactional
     public UserDto createUser(UserDto userDto) {
-        User newUser = UserMapper.INSTANCE.userDtoToUser(userDto);
-        if (getUsers().stream().noneMatch(user -> user.getEmail().equals(newUser.getEmail()))) {
-            return UserMapper.INSTANCE.userToUserDto(userRepository.save(newUser));
+        User newUser = userMapper.userDtoToUser(userDto);
+        if (userRepository.findAll().stream().noneMatch(user -> user.getEmail().equals(newUser.getEmail()))) {
+            return userMapper.userToUserDto(userRepository.save(newUser));
         } else {
             throw new DuplicateEmailException("Email: " + newUser.getEmail() + " already exists");
         }
     }
 
     @Override
+    @Transactional
     public UserDto updateUser(UserDto partialUserDto, Long userId) {
         User targetUser = getUser(userId);
         User updatedUser = targetUser.toBuilder().build();
-        UserMapper.INSTANCE.updateUserFromDto(partialUserDto, updatedUser);
+        userMapper.updateUserFromDto(partialUserDto, updatedUser);
         Set<ConstraintViolation<User>> violations = validator.validate(updatedUser);
         if (violations.isEmpty()) {
-            if (getUsers()
+            if (userRepository.findAll()
                     .stream()
                     .filter(user -> !user.getId().equals(updatedUser.getId()))
                     .noneMatch(user -> user.getEmail().equals(updatedUser.getEmail()))) {
-                return UserMapper.INSTANCE.userToUserDto(userRepository.save(updatedUser));
+                return userMapper.userToUserDto(userRepository.save(updatedUser));
             } else {
                 throw new DuplicateEmailException("Email: " + updatedUser.getEmail() + " already exists");
             }
@@ -81,7 +79,7 @@ public class UserServiceImpl implements UserService {
         return userRepository.findById(id).orElseThrow(() -> new UserNotFoundException("No user with ID: " + id));
     }
 
-    private List<User> getUsers() {
-        return userRepository.findAll();
+    private Page<User> getUsers(PageRequest pageRequest) {
+        return userRepository.findAll(pageRequest);
     }
 }
